Added some math

--- a/courses/PA199/project/CMakeLists.txt
+++ b/courses/PA199/project/CMakeLists.txt
@@ -15,17 +15,21 @@ find_package(lodepng CONFIG REQUIRED)
 
 target_sources(PA199_project
     # Here you can add more source files to the excutable of the game.
-    PUBLIC "some_game_file.cpp" # This includes the tutorial file. Can be removed.
+    PUBLIC 
+            "some_game_file.cpp" # This includes the tutorial file. Can be removed.
+            "PetrMath"
 )
 
 # Add sub-directories of your libraries
 add_subdirectory("some_my_library_dir")  # This includes the tutorial library. Can be removed.
+add_subdirectory("PetrMath")
 
 # Include your liblaries to linking of the project.
 target_link_libraries(PA199_project
     PUBLIC 
         lodepng # This links the lodepng library. Do not remove.
         "some_my_library" # This links the tutorial library. Can be removed.
+        "PetrMath"
 )
 
 # Includes 'unit_tests' project to the build. DO NOT MODIFY THIS COMMAND:
