--- a/courses/PA199/project/CMakeLists.txt
+++ b/courses/PA199/project/CMakeLists.txt
@@ -19,7 +19,9 @@ target_sources(PA199_project
             "some_game_file.cpp" # This includes the tutorial file. Can be removed.
             "PetrMath"
             "Camera.hpp"
-            "Camera.cpp")
+            "Camera.cpp"
+            "RenderObject.hpp"
+            "RenderObject.cpp")
 
 # Add sub-directories of your libraries
 add_subdirectory("some_my_library_dir")  # This includes the tutorial library. Can be removed.
